gei your glutes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<!-- pagina principal -->
-<nav class="blue">
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo"light-blue lighten-1>Aquamin</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a class="white-text" href="sass.html">Usuarios</a></li>
-      <li><a class="white-text" href="badges.html">Sensores</a></li>
-      <li><a class="white-text" href="collapsible.html">Cerrar</a></li>
-    </ul>
-  </div>
-</nav>
-<app-users></app-users>
+<!--Carga las rutas-->
+<router-outlet></router-outlet>
