--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -104,8 +104,8 @@
                   <td *ngIf="users.type==5">{{'Guardia'}}</td>
                   <td>{{users.points}}</td>
                   <td>
-                    <a href="#" style="margin-left: 10px; margin-right: 10px;" (click)="updateUser(users)"><i class="material-icons white-text"> editar </i></a>
-                    <a href="#" style="margin-left: 10px; margin-right: 10px;" (click)="deleteUser(users._id)"><i class="material-icons white-text"> delete </i></a>
+                    <a  style="margin-left: 10px; margin-right: 10px;" (click)="updateUser(users)"><i class="material-icons white-text"> editar </i></a>
+                    <a  style="margin-left: 10px; margin-right: 10px;" (click)="deleteUser(users._id)"><i class="material-icons white-text"> delete </i></a>
                   </td>
                 </tr>
               </tbody>
